--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,8 +29,8 @@
     <head lang="es">
     <header class = "header">
         <!-- <h1 style = "color: firebrick; text-align: center"> Go_Online</h1> -->
-        <h1> Go_Online</h1>
-
+        <h1 title = "Hola"> Go_Online</h1>
+        
         <nav>
             <a href="ejemplo5.html">Atras</a>
             <a href="index.html">Home</a>
