--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
     <header class = "header">
         <!-- <h1 style = "color: firebrick; text-align: center"> Go_Online</h1> -->
         <h1 title = "Hola"> Go_Online</h1>
-        
+
         <nav>
             <a href="ejemplo5.html">Atras</a>
             <a href="index.html">Home</a>
@@ -47,6 +47,56 @@
 
 
     <section class = "section">    
+        <h2>Productos</h2>
+
+
+        <article>
+            <header>
+                <h3>Lista de clientes</h3>
+            </header>  
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Edad</th>
+                        <th>Credito</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="texto_centrado" >1</td>
+                        <td>Carlos Porras</td>
+                        <td class="texto_centrado" >23</td>
+                        <td class="texto_derecho">$599</td>
+                    </tr>
+                    <tr>
+                        <td class="texto_centrado" >2</td>
+                        <td>Pedro Mora</td>
+                        <td class="texto_centrado" >45</td>
+                        <td class="texto_derecho">$678</td>
+                    </tr>
+                    <tr>
+                        <td class="texto_centrado" >3</td>
+                        <td>Luis Gonzales</td>
+                        <td class="texto_centrado" >55</td>
+                        <td class="texto_derecho" >$865</td>
+                    </tr>
+                    <tr>
+                        <td class="texto_centrado">4</td>
+                        <td>Katia Perez</td>
+                        <td class="texto_centrado">43</td>
+                        <td class="texto_derecho">$907</td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+
+
+        </article>
+
         <article>
             <header>
                 <h3> Apple Airpods</h3>
