--- a/src/main/resources/static/index_2.html
+++ b/src/main/resources/static/index_2.html
@@ -30,7 +30,7 @@
     <header class = "header">
         <nav class = "nav">
             <!-- <h1 style = "color: firebrick; text-align: center"> Go_Online</h1> -->
-            <a href="index.html" class = "logo nav_link">Go Online</a>
+            <a href="index_2.html" class = "logo nav_link">Go Online</a>
             <nav>
 
                 <ul class= "nav_menu">
