--- a/src/main/resources/static/ejemplo1.html
+++ b/src/main/resources/static/ejemplo1.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<!-- Primer Trabajo en HTML -->
+<!-- Jonathan Quesada -->
 <html>
     <head>
-        <title>Tienda en Linea </title><!-- titulo arriba -->
+        <title>Tienda en Linea</title>
+        <meta charset="UTF-8">
     </head>
     <body>
-        
+
         <div>
             <a href="ejemplo5.html">Atras</a>
             <a href="index_2.html">Home</a>
-            <a href="ejemplo2.html">Adelante</a>
+            <a href="ejemplo2.html">Siguiente</a>
         </div>
 
         <h1>Ejemplo 1</h1>
-        <p>Bloques</p> <!-- para parrafos -->
+        <p>Bloques</p>
 
-        <div>content</div>
-        <p> What is Lorem Ipsum?</p>
-        <p>Lorem Ipsum is simply dummy text of the <strong>printing</strong> and <i>typesetting</i> industry. </p>
-        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-        <p>It was <em>popularised</em> in the 1960s <u>with the release of Letraset</u> sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Duis interdum imperdiet purus ut auctor.</strong> Pellentesque quis sapien eget justo feugiat rhoncus sit amet eget purus.<b>Nullam finibus rutrum dolor,</b> id mattis massa molestie eget. Cras erat turpis, malesuada ac nisi ut, imperdiet lacinia quam. Suspendisse egestas odio neque. Etiam eu orci ut erat suscipit pellentesque. Donec accumsan mattis diam in facilisis. Quisque purus justo, convallis ac augue et, luctus sodales quam. Nam imperdiet ultrices magna, in dignissim ligula facilisis sit amet. Etiam consectetur egestas eros, vel consectetur nisl laoreet in. Cras eu magna fermentum, feugiat sem egestas, consectetur lorem. Quisque eu leo hendrerit, convallis urna non, accumsan turpis.</p>
+            <p>Cras odio tellus, <strong><u>lacinia laoreet sagittis at,</u></strong> efficitur at ex. <i>Aliquam a feugiat turpis,</i> id mollis nisl. Integer tempus dapibus placerat. <em>Proin gravida commodo odio in elementum.</em> Nulla facilisi. Vestibulum non nisi a erat fringilla pretium laoreet eu lacus. Mauris et erat mi. Etiam non euismod dolor, sit amet aliquam dui. Pellentesque non metus malesuada, tempus magna quis, fermentum urna. Donec pulvinar consectetur tincidunt. Duis at nulla mauris. Ut nec accumsan urna, sit amet dictum risus. Suspendisse aliquet eleifend ex et efficitur. Suspendisse eleifend consectetur varius. Morbi ut turpis vitae nisi malesuada vehicula. Morbi vel libero nec elit volutpat molestie id eu elit.</p>
+            <p>Curabitur eget tortor nec eros cursus pellentesque. <u>Vestibulum vitae urna eget arcu fringilla pulvinar at non neque.</u> Integer interdum sed urna sed elementum. Donec iaculis purus a odio pharetra lobortis. Aenean rhoncus rutrum ex. Vestibulum lacinia eu nulla vel iaculis. Sed ullamcorper ligula vel dui tincidunt auctor rutrum a leo. Pellentesque imperdiet felis nec imperdiet bibendum. Duis sit amet felis ornare, molestie metus ac, mattis dolor. Donec nec elementum ante, vel tempor nibh. Aenean nec tincidunt lorem, et faucibus nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam rutrum ex tincidunt tellus dignissim, vitae vehicula nibh fringilla. Nullam risus nisi, lobortis eu vehicula non, vestibulum vehicula ex. Etiam aliquet dolor quis egestas auctor.</p>
+        </div>
+
     </body>
 </html>
-
