--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<!-- Primer Trabajo en HTML -->
+<!-- Jonathan Quesada -->
 <html>
     <head>
-        <title>Tienda en Linea </title><!-- titulo arriba -->
+        <title>Tienda en Linea</title>
+        <meta charset="UTF-8">
     </head>
     <body>
 
         <div>
             <a href="ejemplo1.html">Atras</a>
             <a href="index_2.html">Home</a>
-            <a href="ejemplo3.html">Adelante</a>
+            <a href="ejemplo3.html">Siguiente</a>
         </div>
-        
+
         <h1>Ejemplo 2</h1>
         <p>Encabezados</p>
 
@@ -21,7 +22,5 @@
         <h4>Encabezado de nivel 4</h4>
         <h5>Encabezado de nivel 5</h5>
         <h6>Encabezado de nivel 6</h6>
-
     </body>
 </html>
-
