--- a/src/main/resources/static/index_1.html
+++ b/src/main/resources/static/index_1.html
@@ -23,16 +23,12 @@
     <body>
 
         <header class="header">
-            <nav class="nav">
-                <a href="index_2.html" class="logo nav_link">GoGoOnline</a>
-                <ul class="nav_menu">
-                    <li class="nav_menu_item" ><a class="nav_link nav_menu_link" href="ejemplo5.html">&LeftTriangleBar;</a></li>
-                    <li class="nav_menu_item"><a class="nav_link nav_menu_link" href="ejemplo1.html">&RightTriangleBar;</a></li>
-                    <li class="nav_menu_item"><a class="nav_link nav_menu_link" href="audio.html">Audio</a></li>
-                    <li class="nav_menu_item"><a class="nav_link nav_menu_link" href="video.html">Video</a></li>
-                    <li class="nav_menu_item"><a class="nav_link nav_menu_link" href="iframe.html">Iframe</a></li>
-                    <li class="nav_menu_item"><a class="nav_link nav_menu_link" href="formulario.html">Formulario</a></li>
-                </ul>
+            <h1>GoOnline</h1>
+            <!-- <h1 style="color: lightcoral; text-align: center" >GoOnline</h1> -->
+            <nav>
+                <a href="ejemplo5.html">Atras</a>
+                <a href="index_2.html">Home</a>
+                <a href="ejemplo1.html">Siguiente</a>
             </nav>
         </header>
 
